19.17. Corrigindo links de paginação com ordenação